# sr-teleop

./: README.txt  stack.xml
cyberglove/: CMakeLists.txt  README.md  cyberglove.launch  package.xml
cyberglove/include/cyberglove/: cyberglove_calib_publisher.h  cyberglove_publisher.h  cyberglove_service.h  serial_glove.hpp  xml_calibration_parser.h
cyberglove/launch/: cyberglove.launch
cyberglove/model/: cyberglove18.xml
cyberglove/python_lib/: cyberglove_calibrer.py  cyberglove_library.py  cyberglove_mapper.py
cyberglove/src/: cyberglove_calib_publisher.cpp  cyberglove_node.cpp  cyberglove_publisher.cpp  cyberglove_recalib_node.cpp  cyberglove_service.cpp  serial_glove.cpp  xml_calibration_parser.cpp
cyberglove/test/: test_calibration.cpp
cyberglove_trajectory/: CMakeLists.txt
cyberglove_trajectory/include/cyberglove_trajectory/: cyberglove_trajectory_publisher.h
cyberglove_trajectory/src/: cyberglove_trajectory_node.cpp  cyberglove_trajectory_publisher.cpp
cybergloveplus/include/cybergloveplus/: cyberglove_control.h
cybergloveplus/launch/: control.launch
cybergloveplus/msg/: Calibration.msg
cybergloveplus/src/: cyberglove_control.cpp  run_control.cpp
cybergloveplusui/: asd.cconf  manifest.xml  norman.cconf
cybergloveplusui/include/cybergloveplusui/: formCybergloveCalibration.hpp
cybergloveplusui/src/: formCybergloveCalibration.cpp
cybergloveplusui/ui/: cyberglove_calib.ui
shuttle_xpress/src/shuttle_xpress/: shuttle_xpress
sr_remappers/: CMakeLists.txt  package.xml  setup.py
sr_remappers/include/sr_remappers/: calibration_parser.h  humanhand_to_cyberglove_remapper.h  leaphand_to_cyberglove_remapper.h  shadowhand_to_cyberglove_remapper.h  shadowhand_to_cybergrasp_remapper.h  shadowhand_to_leaphand_remapper.h
sr_remappers/launch/: remapper_glove.launch  remapper_glove_human.launch  remapper_js_jtp.launch  remapper_leaphand.launch  remapper_leaphand_glove.launch
sr_remappers/param/: cyb.py  cyberglovetohumanhand.map  cyberglovetohumanhandimproved.map  tmp.py
sr_remappers/scripts/: js_to_jtp.py
sr_remappers/src/: calibration_parser.cpp  humanhand_to_cyberglove_remapper.cpp  humanhand_to_cyberglove_remapper_node.cpp  leaphand_to_cyberglove_remapper.cpp  leaphand_to_cyberglove_remapper_node.cpp  shadowhand_to_cyberglove_remapper.cpp  shadowhand_to_cyberglove_remapper_node.cpp  shadowhand_to_cybergrasp_remapper.cpp  shadowhand_to_cybergrasp_remapper_node.cpp  shadowhand_to_leaphand_remapper.cpp  shadowhand_to_leaphand_remapper_node.cpp
